WIP schema and indexing
Signed-off-by: Dimitrios (D.) Maimaris <dimitrios.maimaris@ing.com>